# HouseholdAccounts

./: .gitignore  .gitmodules  .hgignore
.github/workflows/: automake.yml  cmake.yml  msbuild.yml
Core/: .hgignore  CMakeLists.txt  COPYING  Makefile.am  bootstrap.sh  configure.ac  run-autoconf  run-autoconf-debug  run-autoconf-release  run-cmake  run-cmake-debug  run-cmake-release  setuplinks.sh
Core/.CMake/: BuildLibraryCommon.cmake  CheckConstExpr.cmake  CheckNullPtr.cmake  CheckOverride.cmake  EnableCxx11.cmake  Makefile.am
Core/.CMake.bak/: CheckConstExpr.cmake  EnableCxx11.cmake
Core/.CMake.bak/Modules/: FindCppUnit.cmake
Core/.M4/: CheckConstExpr.m4  CheckExtraFlags.m4  CheckNullPtr.m4  ConfigDirectory.m4  EnableCxx11.m4  InitAutoMake.1.12.m4  InitAutoMake.1.13.m4  LinkerScripts.m4  Makefile.am  WithExtLibs.m4  WithExtPkgs.m4
Core/Include/Account/.Config/: ConfiguredProject.h.in  PreConfigHouseholdAccounts.msvc.h  PreConfigProject.msvc.h
Core/Include/Account/Common/: AccountsProject.h  AccountsTypes.h  BookInterface.h  DateTimeFormat.h  DecimalCurrency.h  EnumBitFlag.h  HouseholdAccountsSettings.h  StrictInteger.h  StrictInteger.inl  StrictTypes.h  StrictTypes.inl  StrictVector.h  StrictVector.inl  TextParser.h
Core/Include/Account/DocCls/: AccountAmountChange.h  AggregatesBlock.h  BookCategory.h  BookDocument.h  CategoryManager.h  Merchandise.h  PurchasedGoods.h  Receipt.h  ReceiptEntriesChunk.h  ReceiptInfo.h  StringTable.h
Core/Include/Account/Documents/: BookCategory.h  BookDocument.h  CategoryManager.h  StringTable.h
Core/Include/Account/FileFormat/: BookFile.h
Core/Include/Account/Format/: BookFile.h  ReceiptFile.h
Core/Include/Account/pch/: PreCompile.h
Core/Include/HouseholdAccounts/.Config/: ConfiguredHouseholdAccounts.h.in  PreConfigHouseholdAccounts.msvc.h
Core/Include/HouseholdAccounts/Common/: AccountsTypes.h  BookInterface.h  DecimalCurrency.h  HouseholdAccountsSettings.h  TextParser.h
Core/Include/HouseholdAccounts/Documents/: BookCategory.h  BookDocument.h  CategoryManager.h  StringTable.h
Core/Include/HouseholdAccounts/FileFormat/: BookFile.h
Core/Lib/: CMakeLists.txt  Makefile.am
Core/Lib/.Config/: CMakeLists.txt  Makefile.am
Core/Lib/.LinkerScript/: Common.in  DocCls.in  Document.in  Documents.in  FileFormat.in  Format.in
Core/Lib/Common/: CMakeLists.txt  DateTimeFormat.cpp  DecimalCurrency.cpp  Makefile.am  TextParser.cpp
Core/Lib/Common/Tests/: AccountsProjectTest.cpp  DateTimeFormatTest.cpp  DecimalCurrencyTest.cpp  EnumBitFlagTest.cpp  HouseholdAccountsSettingsTest.cpp  StrictIntegerTest.cpp  StrictTypesTest.cpp  StrictVectorTest.cpp  TestConf.cmake  TestConf.mak  TextParserTest.cpp
Core/Lib/DocCls/: AccountAmountChange.cpp  AggregatesBlock.cpp  BookCategory.cpp  BookDocument.cpp  CMakeLists.txt  CategoryManager.cpp  Makefile.am  Merchandise.cpp  PurchasedGoods.cpp  Receipt.cpp  ReceiptEntriesChunk.cpp  ReceiptInfo.cpp  StringTable.cpp
Core/Lib/DocCls/Tests/: BookCategoryTest.cpp  BookDocumentTest.cpp  CategoryManagerTest.cpp  MerchandiseTest.cpp  PurchasedGoodsTest.cpp  ReceiptEntriesChunkTest.cpp  ReceiptInfoTest.cpp  ReceiptTest.cpp  SetupTestData.inl  StringTableTest.cpp  TestConf.cmake  TestConf.mak
Core/Lib/Documents/: BookCategory.cpp  BookDocument.cpp  CMakeLists.txt  CategoryManager.cpp  Makefile.am  StringTable.cpp
Core/Lib/Documents/Tests/: BookCategoryTest.cpp  BookDocumentTest.cpp  CategoryManagerTest.cpp  StringTableTest.cpp  TestConf.cmake  TestConf.mak
Core/Lib/FileFormat/: BookFile.cpp  CMakeLists.txt
Core/Lib/FileFormat/Tests/: BookFileTest.cpp  TestConf.cmake  TestConf.mak
Core/Lib/Format/: BookFile.cpp  CMakeLists.txt  Makefile.am  ReceiptFile.cpp
Core/Lib/Format/Tests/: BookFileTest.cpp  ReceiptFileTest.cpp  TestConf.cmake  TestConf.mak
Core/Lib/Tests/: CMakeLists.txt  Makefile.am  TestDriver.cpp  TestDriver.h
Core/Lib/Tests/.TestsCommon/: CMakeLists.txt  Makefile.am
Core/Lib/pch/: Makefile.am  PreCompile.cpp
HouseholdAccountsCore/: .gitignore  .hgignore  CMakeLists.txt  COPYING  HouseholdAccountsConfig.cmake.in  Makefile.am  bootstrap.sh  configure.ac  setuplinks.sh
HouseholdAccountsCore/.CMake/: CheckOverride.cmake  FindCppUnit.cmake  Makefile.am
HouseholdAccountsCore/.M4/: CheckExtraFlags.m4  CheckOverride.m4  ConfigDirectory.m4  EnableCxx11.m4  Makefile.DirList.inc  Makefile.Install.inc
HouseholdAccountsCore/Include/HouseholdAccounts/.Config/: ConfiguredHouseholdAccounts.h.in  PreConfigHouseholdAccounts.msvc.h
HouseholdAccountsCore/Include/HouseholdAccounts/Common/: HouseholdAccountsSettings.h
HouseholdAccountsCore/Include/HouseholdAccounts/FileFormat/: BookFile.h
HouseholdAccountsCore/Lib/: CMakeLists.txt  Makefile.am
HouseholdAccountsCore/Lib/.Config/: Makefile.am
HouseholdAccountsCore/Lib/Common/: CMakeLists.txt  Makefile.am
HouseholdAccountsCore/Lib/Common/Tests/: HouseholdAccountsSettingsTest.cpp  TestConf.mak
HouseholdAccountsCore/Lib/Documents/: CMakeLists.txt  Makefile.am
HouseholdAccountsCore/Lib/Documents/Tests/: TestConf.cmake  TestConf.mak
HouseholdAccountsCore/Lib/FileFormat/: CMakeLists.txt  Makefile.am
HouseholdAccountsCore/Lib/FileFormat/Tests/: BookFileTest.cpp
HouseholdAccountsCore/Lib/Tests/: CMakeLists.txt  TestDriver.cpp
HouseholdAccountsCore/Lib/Tests/.TestsCommon/: CMakeLists.txt  Makefile.am
HouseholdAccountsView/: .hgignore  HouseholdAccountsView.sln
HouseholdAccountsView/HouseholdAccountsCore/: HouseholdAccountsCore.vcxproj  HouseholdAccountsCore.vcxproj.filters
HouseholdAccountsView/HouseholdAccountsView/: HouseholdAccountsView.vbproj  MainView.Designer.vb  MainView.resx  MainView.vb
HouseholdAccountsView/HouseholdAccountsWrapper/: AssemblyInfo.cpp  HouseholdAccountsWrapper.cpp  HouseholdAccountsWrapper.h  HouseholdAccountsWrapper.vcxproj  HouseholdAccountsWrapper.vcxproj.filters  ReadMe.txt  Stdafx.cpp
View/: .gitignore  .hgignore  COPYING  HouseholdAccountsView.sln  Rebuild.bat
View/Cli.Net4.8/: Wrapper.Net48.vcxproj  Wrapper.Net48.vcxproj.filters  Wrapper.vcxproj
View/Core/: Core.vcxproj  (+2 more)
(+97 files in other folders)
