
##----------------------------------------------------------------
##
##    プロジェクトの基本設定。
##

##----------------------------------------------------------------
##
##    サブディレクトリの追加。
##

Add_SubDirectory (Tests)
Add_SubDirectory (.Config)

Add_SubDirectory (Common)
Add_SubDirectory (Documents)
Add_SubDirectory (FileFormat)

