
##----------------------------------------------------------------
##
##    プロジェクトの基本設定。
##

##----------------------------------------------------------------
##
##    サブディレクトリの追加。
##

Add_SubDirectory (Tests)
Add_SubDirectory (.Config)

Add_SubDirectory (Common)
Add_SubDirectory (DocCls)
Add_SubDirectory (Format)

