
##
##    List of Directories.
##

##
##    List of Installs.
##

dist_noinst_DATA    =  \
    BuildLibraryCommon.cmake  \
    CheckConstExpr.cmake      \
    CheckNullPtr.cmake        \
    CheckOverride.cmake       \
    CheckStaticAssert.cmake   \
    EnableCxx11.cmake         \
    FindCppUnit.cmake

